--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "keisukesaichi/rakuten-api",
+    "version": "1.0.2",
     "autoload": {
         "psr-4": {
             "RakutenApi\\": "RakutenApi/"
