--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "keisukesaichi/rakuten-api",
-    "version": "1.0.2",
+    "version": "v1.0.2",
+    "license": "MIT",
     "autoload": {
         "psr-4": {
             "RakutenApi\\": "RakutenApi/"
