--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "keisukesaichi/rakuten-api",
+    "version": "2.0.0",
     "autoload": {
         "psr-4": {
             "RakutenApi\\": "RakutenApi/"
@@ -13,6 +14,7 @@
     ],
     "require": {
         "vlucas/phpdotenv": "^5.6",
-        "keisukesaichi/http-client": "^1.0"
+        "keisukesaichi/http-client": "^1.0",
+        "keisukesaichi/api-dto": "^1.0"
     }
 }
