--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "keisukesaichi/rakuten-api",
-    "version": "v1.0.3",
+    "version": "2.0.0",
     "license": "MIT",
     "autoload": {
         "psr-4": {
@@ -15,6 +15,7 @@
     ],
     "require": {
         "vlucas/phpdotenv": "^5.6",
-        "keisukesaichi/http-client": "^1.0"
+        "keisukesaichi/http-client": "^1.0",
+        "keisukesaichi/api-dto": "^1.0"
     }
 }
